--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-cli": "^6.9.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
     "express": "^4.13.4",
