--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.1.0",
-    "react-dom": "^15.0.2"
+    "react-dom": "^15.0.2",
+    "react-router": "^2.4.1"
   }
 }
