--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "api-server": "nodemon server/api/index.js",
     "listener": "nodemon server/listening/index.js",
     "lint": "eslint --fix client server"
+    "lint": "eslint client server",
+    "test:client": "karma start"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -33,13 +35,25 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
+    "enzyme": "^2.3.0",
+    "expect": "^1.20.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.7.0",
     "lodash": "^4.13.1",
     "pg": "^5.1.0",
+    "mocha": "^2.5.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.1.0",
+    "react-addons": "^0.9.1-deprecated",
+    "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.0.2",
     "react-router": "^2.4.1"
   }
