--- a/package.json
+++ b/package.json
@@ -26,7 +26,18 @@
     "eslint-plugin-react": "^5.1.1",
     "nodemon": "^1.9.2",
     "webpack": "^1.13.1",
-    "webpack-stream": "^3.2.0"
+    "webpack-stream": "^3.2.0",
+    "enzyme": "^2.3.0",
+    "expect": "^1.20.1",
+    "json-loader": "^0.5.4",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^2.5.3"
   },
   "dependencies": {
     "babel-cli": "^6.9.0",
@@ -35,17 +46,8 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
-    "enzyme": "^2.3.0",
-    "expect": "^1.20.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^1.0.1",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
     "lodash": "^4.13.1",
     "pg": "^5.1.0",
     "mocha": "^2.5.3",
