--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "listener": "nodemon server/listening/index.js",
     "lint": "eslint --fix client server"
     "lint": "eslint client server",
-    "test:client": "karma start"
+    "test:client": "karma start",
+    "test:server": "node server/api/index.js & mocha --bail --reporter nyan test/ApiServerSpec.js; pkill -n node;"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -43,6 +44,7 @@
     "babel-cli": "^6.9.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
+    "chai": "^3.5.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
@@ -57,6 +59,7 @@
     "react-addons": "^0.9.1-deprecated",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.0.2",
-    "react-router": "^2.4.1"
+    "react-router": "^2.4.1",
+    "supertest": "^1.2.0"
   }
 }
