Working signup test

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "listener": "nodemon server/listening/index.js",
     "lint": "eslint --fix client server",
     "test:client": "karma start",
-    "test:server": "node server/api/index.js & mocha --bail --reporter nyan test/ApiServerSpec.js; pkill -n node;"
+    "test:server": "node server/api/index.js & mocha --bail --reporter nyan test/server/api/integrationSpec.js; pkill -n node;"
   },
   "devDependencies": {
     "babel": "^6.5.2",
