--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "webpack-stream": "^3.2.0",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.9.1",
-    "redux-logger": "^2.4.0",
+    "redux-logger": "^2.4.0"
   },
   "dependencies": {
     "babel-cli": "^6.9.0",
