--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "test:server": "mocha --bail test/server/api/integrationSpec.js;",
     "api:test-server": "NODE_ENV=test PORT=8888 node server/api/index.js",
     "test:count": "mocha --bail test/server/api/countSpec.js",
-    "seed-test": "NODE_ENV=test node server/db/seed/dbSeed.js; pkill -n node;",
-    "seed-db": "node server/db/seed/dbSeed.js"
+    "test:seeddb": "mocha --bail test/server/api/dbSeedSpec.js",
+    "seed-test": "NODE_ENV=test node server/db/seed/seedTestDb.js; pkill -n node;",
+    "seed-db": "node server/db/seed/seedDb.js"
   },
   "devDependencies": {
     "concurrently": "^0.1.1",
@@ -64,6 +65,7 @@
     "redux-logger": "^2.4.0"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.6",
     "babel-cli": "^6.9.0",
     "babel-polyfill": "^6.3.14",
     "bcrypt-nodejs": "0.0.3",
