--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:server": "mocha --bail test/server/api/integrationSpec.js;",
     "api:test-server": "NODE_ENV=test PORT=8888 node server/api/index.js",
     "test:count": "mocha --bail test/server/api/countSpec.js",
+    "test:seeddb": "mocha --bail test/server/api/dbSeedSpec.js",
     "seed-test": "NODE_ENV=test node server/db/seed/dbSeed.js; pkill -n node;",
     "seed-db": "node server/db/seed/dbSeed.js"
   },
