Switch gears to making the controllers

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "api:test-server": "NODE_ENV=test PORT=8888 node server/api/index.js",
     "test:count": "mocha --bail test/server/api/countSpec.js",
     "test:seeddb": "mocha --bail test/server/api/dbSeedSpec.js",
-    "seed-test": "NODE_ENV=test node server/db/seed/dbSeed.js; pkill -n node;",
-    "seed-db": "node server/db/seed/dbSeed.js"
+    "seed-test": "NODE_ENV=test node server/db/seed/seedTestDb.js; pkill -n node;",
+    "seed-db": "node server/db/seed/seedDb.js"
   },
   "devDependencies": {
     "concurrently": "^0.1.1",
