--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "demo": "npm run build & npm run api-server & npm run listener & npm run example:client",
     "build": "webpack --watch",
     "api-server": "nodemon server/api/index.js",
+    "api:deployed-server": "NODE_ENV=deployed nodemon server/api/index.js",
     "listener": "nodemon server/listening/index.js",
     "lint": "eslint --fix client server test",
     "test": "npm run api:test-server & npm run test:backend && npm run test:client; pkill -n node;",
