--- a/package.json
+++ b/package.json
@@ -6,20 +6,23 @@
     "demo": "npm run build & npm run api-server & npm run listener & npm run example:client",
     "build": "webpack --watch",
     "api-server": "nodemon server/api/index.js",
+    "api:deployed-server": "NODE_ENV=deployed nodemon server/api/index.js",
     "listener": "nodemon server/listening/index.js",
+    "listener:deployed-server": "NODE_ENV=deployed PORT=8080 nodemon server/listening/index.js",
     "lint": "eslint --fix client server test",
     "test": "npm run api:test-server & npm run test:backend && npm run test:client; pkill -n node;",
     "example:client": "node exampleClientSite/index.js",
     "test:client": "karma start",
     "test:backend": "npm run test:stats && npm run test:count && npm run test:api-db && npm run test:lstn-db && npm run test:listening && npm run test:server && pkill -n node && npm run test:error",
     "test:stats": "mocha --bail test/server/api/statsSpec.js",
-    "test:api-db": "mocha --bail test/server/api/dbQueriesSpec.js",
+    "test:api-db": "NODE_ENV=test mocha --bail test/server/api/dbQueriesSpec.js",
     "test:lstn-db": "mocha --bail test/server/listening/dbQueriesSpec.js",
     "test:listening": "NODE_ENV=test PORT=9999 node server/listening/index.js & mocha --bail test/server/listening/integrationSpec.js; pkill -n node;",
     "test:server": "mocha --bail test/server/api/integrationSpec.js;",
     "api:test-server": "NODE_ENV=test PORT=8888 node server/api/index.js",
     "test:count": "mocha --bail test/server/api/countSpec.js",
-    "seed-db": "node server/db/seed/seedDb.js; pkill -n node;",
+    "seed-db": "node server/db/seed/seedDb.js",
+    "deployed:seed-db": "NODE_ENV=deployed node server/db/seed/seedDb.js",
     "test:error": "NODE_ENV=testError PORT_ELS=9999 PORT_API=8888 mocha --bail test/server/simpleErrorHandling.js",
     "test:seeddb": "mocha --bail test/server/api/dbSeedSpec.js",
     "seed-test": "NODE_ENV=test node server/db/seed/seedTestDb.js; pkill -n node;"
