--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "demo": "npm run build & npm run api-server & npm run listener & npm run example:client",
     "build": "webpack --watch",
     "api-server": "nodemon server/api/index.js",
+    "api:deployed-server": "NODE_ENV=deployed nodemon server/api/index.js",
     "listener": "nodemon server/listening/index.js",
     "lint": "eslint --fix client server test",
     "test": "npm run api:test-server & npm run test:backend && npm run test:client; pkill -n node;",
@@ -19,7 +20,8 @@
     "test:server": "mocha --bail test/server/api/integrationSpec.js;",
     "api:test-server": "NODE_ENV=test PORT=8888 node server/api/index.js",
     "test:count": "mocha --bail test/server/api/countSpec.js",
-    "seed-db": "node server/db/seed/seedDb.js; pkill -n node;",
+    "seed-db": "node server/db/seed/seedDb.js",
+    "deployed:seed-db": "NODE_ENV=deployed node server/db/seed/seedDb.js",
     "test:error": "NODE_ENV=testError PORT_ELS=9999 PORT_API=8888 mocha --bail test/server/simpleErrorHandling.js",
     "test:seeddb": "mocha --bail test/server/api/dbSeedSpec.js",
     "seed-test": "NODE_ENV=test node server/db/seed/seedTestDb.js; pkill -n node;"
