--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:server": "mocha --bail test/server/api/integrationSpec.js;",
     "api:test-server": "NODE_ENV=test PORT=8888 node server/api/index.js",
     "test:count": "mocha --bail test/server/api/countSpec.js",
-    "seed-db": "node server/db/seed/seedDb.js; pkill -n node;",
+    "seed-db": "node server/db/seed/seedDb.js",
     "test:error": "NODE_ENV=testError PORT_ELS=9999 PORT_API=8888 mocha --bail test/server/simpleErrorHandling.js",
     "test:seeddb": "mocha --bail test/server/api/dbSeedSpec.js",
     "seed-test": "NODE_ENV=test node server/db/seed/seedTestDb.js; pkill -n node;"
