--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "api:test-server": "NODE_ENV=test PORT=8888 node server/api/index.js",
     "test:count": "mocha --bail test/server/api/countSpec.js",
     "seed-db": "node server/db/seed/seedDb.js",
+    "deployed:seed-db": "NODE_ENV=deployed node server/db/seed/seedDb.js",
     "test:error": "NODE_ENV=testError PORT_ELS=9999 PORT_API=8888 mocha --bail test/server/simpleErrorHandling.js",
     "test:seeddb": "mocha --bail test/server/api/dbSeedSpec.js",
     "seed-test": "NODE_ENV=test node server/db/seed/seedTestDb.js; pkill -n node;"
