--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "api-server": "nodemon server/api/index.js",
     "api:deployed-server": "NODE_ENV=deployed nodemon server/api/index.js",
     "listener": "nodemon server/listening/index.js",
+    "listener:deployed-server": "NODE_ENV=deployed nodemon server/listening/index.js",
     "lint": "eslint --fix client server test",
     "test": "npm run api:test-server & npm run test:backend && npm run test:client; pkill -n node;",
     "example:client": "node exampleClientSite/index.js",
