--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "faker": "^3.1.0",
+    "file-loader": "^0.9.0",
     "geoip-lite": "^1.1.8",
     "jsdom": "^9.3.0",
     "lodash": "^4.13.1",
